# portfolio-agent

./: .env.example  .gitignore  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  alembic.ini  create_owner_temp.py  pyproject.toml  railway.json  requirements.txt  reset_password.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: config.py  dependencies.py  main.py
backend/app/agent/: context.py  orchestrator.py  router.py
backend/app/auth/: models.py  router.py  schemas.py  service.py
backend/app/db/: models.py  session.py
backend/app/memory/: long_term.py  short_term.py
backend/app/notifications/: discord.py  email.py  slack.py
backend/app/routers/: admin.py  content.py  deploy.py  health.py  leads.py  logs.py  memory.py
backend/app/scheduler/: tasks.py
backend/app/tools/: base.py  content.py  deploy.py  leads.py  logs_tool.py  memory_tools.py  monitor.py  notifications.py  registry.py
backend/routers/: health.py
backend/tests/: conftest.py  test_agent.py  test_auth.py  test_leads.py  test_tools.py
cli/: pyproject.toml
cli/portfolio_cli/: client.py  config.py  main.py
cli/portfolio_cli/commands/: agent.py  auth.py  deploy.py  leads.py  logs.py  memory.py  monitor.py
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs  tauri-bridge.ts
frontend/: next.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  providers.tsx
frontend/src/app/dashboard/: layout.module.css  layout.tsx  page.module.css  page.tsx
frontend/src/app/login/: login.module.css  page.tsx
frontend/src/components/: AgentChat.tsx  DeployPanel.tsx  LeadsTable.tsx  LogViewer.tsx  StatusPanel.tsx
frontend/src/types/: index.ts
scripts/: create_owner.py  migrate.sh
(+8 files in other folders)
