[package]
name = "portfolio-agent-desktop"
version = "1.0.0"
description = "Portfolio Agent Desktop"
authors = ["Rohail"]
edition = "2021"

[lib]
name = "portfolio_agent_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "notification"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-http = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }